--- a/Sesión 04 - Introducción a LangChain/requirements.txt
+++ b/Sesión 04 - Introducción a LangChain/requirements.txt
@@ -6,13 +6,18 @@ asttokens==2.4.0
 async-timeout==4.0.3
 attrs==23.1.0
 backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.0.1
 beautifulsoup4==4.12.2
 certifi==2023.7.22
 cffi==1.15.1
 chardet==5.2.0
 charset-normalizer==3.2.0
+chroma-hnswlib==0.7.3
+chromadb==0.4.13
 click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
 comm==0.1.4
 cryptography==41.0.4
 dataclasses-json==0.6.0
@@ -22,11 +27,19 @@ distlib==0.3.7
 emoji==2.8.0
 exceptiongroup==1.1.3
 executing==1.2.0
+fastapi==0.103.1
 filelock==3.12.4
 filetype==1.2.0
+flatbuffers==23.5.26
 frozenlist==1.4.0
+fsspec==2023.9.2
 greenlet==2.0.2
+h11==0.14.0
+httptools==0.6.0
+huggingface-hub==0.16.4
+humanfriendly==10.0
 idna==3.4
+importlib-resources==6.1.0
 ipykernel==6.25.2
 ipython==8.15.0
 jedi==0.19.0
@@ -40,13 +53,17 @@ langsmith==0.0.40
 lxml==4.9.3
 marshmallow==3.20.1
 matplotlib-inline==0.1.6
+monotonic==1.6
+mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
 nltk==3.8.1
 numexpr==2.8.6
 numpy==1.26.0
+onnxruntime==1.16.0
 openai==0.28.0
+overrides==7.4.0
 packaging==23.1
 parso==0.8.3
 pdf2image==1.16.3
@@ -55,14 +72,19 @@ pdfminer.six==20221105
 pickleshare==0.7.5
 Pillow==10.0.1
 platformdirs==3.10.0
+posthog==3.0.2
 prompt-toolkit==3.0.39
+protobuf==4.24.3
 psutil==5.9.5
+pulsar-client==3.3.0
 pure-eval==0.2.2
 pycparser==2.21
 pycryptodome==3.19.0
 pydantic==2.4.0
 pydantic_core==2.10.0
 Pygments==2.16.1
+PyPika==0.48.9
+pyreadline3==3.4.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-iso639==2023.6.15
@@ -77,16 +99,23 @@ sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.21
 stack-data==0.6.2
+starlette==0.27.0
+sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.3
 tiktoken==0.5.1
+tokenizers==0.14.0
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.10.0
+typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 unstructured==0.10.16
 urllib3==2.0.5
+uvicorn==0.23.2
 virtualenv==20.24.5
+watchfiles==0.20.0
 wcwidth==0.2.6
+websockets==11.0.3
 yarl==1.9.2
