--- a/Sesión 04 - Introducción a LangChain/requirements.txt
+++ b/Sesión 04 - Introducción a LangChain/requirements.txt
@@ -10,6 +10,7 @@ backoff==2.2.1
 bcrypt==4.0.1
 beautifulsoup4==4.12.2
 bs4==0.0.1
+cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
 chardet==5.2.0
@@ -34,8 +35,15 @@ filetype==1.2.0
 flatbuffers==23.5.26
 frozenlist==1.4.0
 fsspec==2023.9.2
+google-api-core==2.12.0
+google-api-python-client==2.101.0
+google-auth==2.23.0
+google-auth-httplib2==0.1.1
+google-search-results==2.4.2
+googleapis-common-protos==1.60.0
 greenlet==2.0.2
 h11==0.14.0
+httplib2==0.22.0
 httptools==0.6.0
 huggingface-hub==0.16.4
 humanfriendly==10.0
@@ -50,6 +58,7 @@ jsonpointer==2.4
 jupyter_client==8.3.1
 jupyter_core==5.3.1
 langchain==0.0.301
+langchainhub==0.1.13
 langsmith==0.0.40
 lxml==4.9.3
 marshmallow==3.20.1
@@ -80,11 +89,14 @@ protobuf==4.24.3
 psutil==5.9.5
 pulsar-client==3.3.0
 pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 pycryptodome==3.19.0
 pydantic==2.4.0
 pydantic_core==2.10.0
 Pygments==2.16.1
+pyparsing==3.1.1
 PyPika==0.48.9
 pyreadline3==3.4.1
 python-dateutil==2.8.2
@@ -96,6 +108,7 @@ PyYAML==6.0.1
 pyzmq==25.1.1
 regex==2023.8.8
 requests==2.31.0
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -111,10 +124,13 @@ tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.10.1
 typer==0.9.0
+types-requests==2.31.0.5
+types-urllib3==1.26.25.14
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 unstructured==0.10.16
-urllib3==2.0.5
+uritemplate==4.1.1
+urllib3==1.26.16
 uvicorn==0.23.2
 virtualenv==20.24.5
 watchfiles==0.20.0
